--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,8 @@
 <!Doctype = html>
 <html lang="en">
+<head>
 <title>Alessandra Maria Adams Resume</title>
-
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,6 +16,7 @@
 </ul>
 <p>Alessandra is a student at the University of Maryland majoring in Multi-Platform Journalism and minoring in General Business.
 </p>
+<!--Experience Section-->
 <h2>Experience</h2>
 <h3>Filmmaking Camp Counselor</h3>
 <h4>TIC Summer Camp</h4>
@@ -34,6 +36,7 @@
 	<li>Communicate with customers regarding wants and needs for their visit.</li>
 
 </ul>
+<!--Education section-->
 <h2>Education</h2>
 <h4>University of Maryland, College Park</h4>
 <ul>
