--- a/resume/index.html
+++ b/resume/index.html
@@ -1,55 +1,89 @@
 <!Doctype = html>
-<html lang="en">
+<div id="container">
+	<html lang="en">
 <head>
 <title>Alessandra Maria Adams Resume</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1>Alessandra Maria Adams</h1>
-<b> Journalism Student</b>
+<div id="name">
+Alessandra Maria Adams
+</div>
+<div id="title">
+	 Journalism Student
+</div>
 <img src="alessandra_adams.JPG" alt="Picture of Alessandra Adams" width="300">
+<div class="menu">
 <ul>
 	<li><a href="alessandraamaria3@gmail.com" target="_blank">alessandraamaria3@gmail.com</a></li>
-	<li><a href="www.linkedin.com/in/alessandramariaadams" target="_blank">LinkedIn</a>
-	<li><a href="https://github.com/alessandraadams" target="_blank">GitHub</a>
-</ul>
-<p>Alessandra is a student at the University of Maryland majoring in Multi-Platform Journalism and minoring in General Business.
+	<li><a href="www.linkedin.com/in/alessandramariaadams" target="_blank">LinkedIn</a></li>
+	<li><a href="https://github.com/alessandraadams" target="_blank">GitHub</a></li>
+</ul> </div>
+<div class="description">
+<p>	Alessandra is a student at the University of Maryland majoring in Multi-Platform Journalism and minoring in General Business.
 </p>
+</div>
 <!--Experience Section-->
-<h2>Experience</h2>
-<h3>Filmmaking Camp Counselor</h3>
-<h4>TIC Summer Camp</h4>
-<h5>May 2019 - August 2019 and May 2020- August 2020</h5>
+<div class="sectionheader">
+Experience
+</div>
+<div class="jobtitle">
+	Filmmaking Camp Counselor
+</div>
+<div class="organization">
+	<h4>TIC Summer Camp</h4>
+</div>
+<div class="date">
+	<h5>May 2019 - August 2019 and May 2020- August 2020</h5>
+</div>
+<div class="menu">
 <ul>
 <li>Oversee the curation of camp made films</li>
 <li>Work with campers to come up with and create a short film.</li>
 <li>Teach campers to basics of Adobe Premiere Pro and camera techniques</li>
 </ul>
-<h3>Front Desk</h3>
-<h4> SoulCycle Bethesda </h4>
-<h5>April 2021 - Present</h5>
-<ul>
+</div>
+<div class="jobtitle">
+	Front Desk
+</div>
+<div class="organization">
+	<h4> SoulCycle Bethesda </h4>
+</div>
+<div class="date">
+	<h5>April 2021 - Present</h5>
+</div>
+<div class="menu">
+	<ul>
 	<li>Effectively communicate with team members and customers</li>
 	<li>Brainstorm ways to go above and beyond for customers</li>
 	<li>Work with staff to keep common spaces clean and sanitized throughout the day</li>
 	<li>Communicate with customers regarding wants and needs for their visit.</li>
 
-</ul>
+</ul></div>
 <!--Education section-->
-<h2>Education</h2>
-<h4>University of Maryland, College Park</h4>
-<ul>
+<div class="sectionheader">
+	Education
+</div>
+<div class="organization">
+	<h4>University of Maryland, College Park</h4>
+</div>
+<div class="menu" id="degrees">
+	<ul>
 <li>Bachelor of Arts, Multi-Platform Journalisms, University of Maryland, College Park, 2023</li>
-</ul>
+</ul></div>
 
 
-<h2> Skills </h2>
-<ul>
+<div  class="sectionheader">
+	Skills
+</div>
+<div id="do">
+	<ul>
 <li> Leadership </li>
 <li>Customer Service</li>
 <li>Adobe Permiere Pro </li>
-</ul>
+</ul> </div>
 </body>
 <!--I built this myself-->
 </html>
+</div>
