--- a/resume/index.html
+++ b/resume/index.html
@@ -37,7 +37,7 @@ Experience
 <div class="date">
 	<h5>May 2019 - August 2019 and May 2020- August 2020</h5>
 </div>
-<div class="menu">
+<div class="details">
 <ul>
 <li>Oversee the curation of camp made films</li>
 <li>Work with campers to come up with and create a short film.</li>
@@ -53,7 +53,7 @@ Experience
 <div class="date">
 	<h5>April 2021 - Present</h5>
 </div>
-<div class="menu">
+<div class="details">
 	<ul>
 	<li>Effectively communicate with team members and customers</li>
 	<li>Brainstorm ways to go above and beyond for customers</li>
