--- a/bootstrap_template/template.html
+++ b/bootstrap_template/template.html
@@ -53,8 +53,101 @@
   </div>
 </nav>
 <!-- Navbar end-->
+<div class="headline">
+  <h1>Alessandra Adams</h1>
+</div>
+<div class="byline">
+  A portfolio
+  <div class="chapterheadline">
+    <h2> Chapter Headline </h2>
+  </div>
+  <div class="chaptertext">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat consequat mauris nunc congue nisi vitae suscipit tellus mauris. Nam libero justo laoreet sit amet cursus sit amet. Diam maecenas ultricies mi eget mauris. Mattis molestie a iaculis at. Volutpat blandit aliquam etiam erat velit. Fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis. Vivamus arcu felis bibendum ut tristique. Placerat orci nulla pellentesque dignissim enim. Ut sem nulla pharetra diam. Elementum integer enim neque volutpat ac tincidunt vitae semper quis. 
+</div>
+<div class="thumbnail">
+  <img src="abc.jpeg" alt= "Photo of Alessandra Adams" width="300px">
+</div>
+<h6> A photo of Alessandra Adams</h6>
+ <!-- Hero start-->
+<div class="px-4 py-5 my-5 text-center">
+  <h1 class="display-5 fw-bold">Centered hero</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world's most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+      <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+      <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+    </div>
+  </div>
+</div>
+<!-- Hero end-->
 
-	Hello World
+<div class="container">
+  
+        <div class="row">
+
+                <div class="col-md-4">
+                   <i class="bi bi-layers-fill"></i>
+                        <h3>Heading 1</h3>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                </div>
+<style>
+.bi {
+  font-size:3em;
+}
+
+.col-md-4 {
+  text-align: center;
+}
+.headline {
+  text-align: center;
+  font-family: Georgia ;
+
+}
+.byline {
+  text-align: center;
+}
+.thumbnail {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+  padding-top: 20px;
+}
+.chapterheadline {
+  text-align: left;
+padding-left: 40px;
+padding-right: 40px;
+font-style: bold;
+font-family: georgia;
+
+}
+.chaptertext {
+  font-size: small;
+  text-align: left;
+padding-left: 40px;
+padding-right: 40px;
+font-family: georgia;
+font-size: 15px;
+font-weight: 100px;
+}
+
+</style>
+
+                <div class="col-md-4">
+                   <i class="bi bi-peace-fill"></i>
+                        <h3>Heading 2</h3>
+                        <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
+                </div>
+
+                <div class="col-md-4">
+                  <i class="bi bi-bookmark-heart-fill"></i>
+                        <h3>Heading 3</h3>
+                        <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                </div>
+        </div>
+</div>
+
+Alessandra Adams Portfolio
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
